Fix z-index

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -57,6 +57,7 @@ body {
     a {
       display: block;
       position: absolute;
+      z-index: -10;
       margin-left: -72px;
       text-decoration: none;
       background: url(/images/logo.png) no-repeat 0 0;
